src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.less
@import "../../less/map-facade";


:host {
	position: absolute;
	display: inline-block;
	min-width: 114px;
	border-radius: 0;
	background-color: rgba(0,0,0,.3);
	z-index: @z-index-map-rotation;
	left: 0;
	padding: 0 15px;
	font-size: smaller;
	text-align: center;
	vertical-align: bottom;
	user-select: none;
	height: @mouse-coordinate-height;
}


div.imageries-container {
	:host {
		bottom: @mouse-coordinate-bottom;
	}

	&.layout3 {
		div.map-container-wrapper:first-child {
			:host {
				bottom: @mouse-coordinate-bottom-minimize;
			}
		}
	}

	&.layout4 {
		div.map-container-wrapper:nth-child(2) {
			:host {
				bottom: @mouse-coordinate-bottom-minimize;
			}
		}
	}

	&.layout5 {
		div.map-container-wrapper:first-child {
			:host {
				bottom: @mouse-coordinate-bottom-minimize;
			}
		}
	}

	&.layout6 {
		div.map-container-wrapper {
			&:nth-child(1), &:nth-child(2) {
				:host {
					bottom: @mouse-coordinate-bottom-minimize;
				}
			}
		}
	}
}

div.footer-collapsed {
	:host{
		bottom: @mouse-coordinate-bottom-minimize;
	}
}

